수정: currentpage 와 title을 페이지에 맞게 수정

--- a/src/main/resources/templates/set-time.html
+++ b/src/main/resources/templates/set-time.html
@@ -2,9 +2,9 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout.html" th:with="currentPage='index'">
+      layout:decorator="layout/default_layout.html" th:with="currentPage='set-time'">
 <head>
-    <title>Home</title>
+    <title>시간 설정</title>
 </head>
 
 <div layout:fragment="custom-content">
