수정: query를 넣을 수 있는 div 태그 추가

--- a/src/main/resources/templates/team-list.html
+++ b/src/main/resources/templates/team-list.html
@@ -10,6 +10,9 @@
 <div layout:fragment="custom-content">
     <h2> 매칭된 팀 목록 </h2>
 
+    <div class="inquery">
+
+    </div>
 
     <div class="list-container">
         <table class="table">
