Add: #5 Add 42 oauth2 security
1. Add: Security Config
2. Add: SessionServise
3. Edit: change header cuz UserSession
4. Edit: Add script tag use bootstrap.bundle.js

--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -3,5 +3,6 @@
       xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="fragment-footer" class="footer">
     <script th:src="@{js/bootstrap.js}"></script>
+    <script th:src="@{js/bootstrap.bundle.js}"></script>
 </footer>
 </html>
