--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout.html" th:with="currentPage='team_list'">
+      layout:decorator="layout/default_layout.html" th:with="currentPage='list_team'">
 <head>
     <title>Home</title>
 </head>
