--- a/src/main/resources/templates/set_time.html
+++ b/src/main/resources/templates/set_time.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout.html" th:with="currentPage='set-time'">
+      layout:decorator="layout/default_layout.html" th:with="currentPage='set_time'">
 <head>
     <title>시간 설정</title>
 </head>
