추가: #84 필터 버튼 추가

--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -11,7 +11,12 @@
     <h2> 매칭된 팀 목록 </h2>
 
     <div class="inquery">
-
+        <div class="row">
+            <div class="col">
+                    <button type="button" class="btn btn-primary">모든 팀</button>
+                    <button type="button" class="btn btn-outline-primary">내가 속한 팀</button>
+            </div>
+        </div>
     </div>
 
     <div class="list-container">
