추가: #84 필터 기능 구현 (내가 속한 팀)

--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -13,8 +13,8 @@
     <div class="inquery">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="location.href='/list_team'">모든 팀</button>
-                <button type="button" class="btn btn-outline-primary" onclick="location.href='/list_myteam'">내가 속한 팀</button>
+                <button type="button" class="btn btn-outline-primary" onclick="location.href='/list_team'">모든 팀</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='/list_myteam'">내가 속한 팀</button>
             </div>
         </div>
     </div>
