수정: findTeams 서비스를 이용하여 조회하도록 수정
pagenation 로직 삭제
User로 조회하지않고, 프론트 쪽에서 로그인 유저는 출력하지 않게 팀목록 구성

--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -25,7 +25,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="team : ${teams}">
+            <tr th:each="team : ${teams}" th:if="${team.getNicknameByMentee()} != ${user.nickname}">
                 <th scope="row" th:text="${team.teamId}">팀 아이디</th>
                 <td th:text="${team.projectName}">프로젝트 명칭</td>
                 <td>
