--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                             <span th:if="${team.location.toString().equals('SEOCHO')}">서초</span>
                             <span th:if="${team.location.toString().equals('ONLINE')}">온라인</span>
                         </td>
-                        <td th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</td>
+                        <td th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</td>
                         <td>
                             <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
                             ~
@@ -116,7 +116,7 @@
                             <span th:if="${team.location.toString().equals('SEOCHO')}">서초</span>
                             <span th:if="${team.location.toString().equals('ONLINE')}">온라인</span>
                         </td>
-                        <td th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</td>
+                        <td th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</td>
                         <td>
                             <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
                             ~
