HOTFIX: 스케줄 추가 후 index페이지 에러 수정

--- a/src/main/resources/templates/set_time.html
+++ b/src/main/resources/templates/set_time.html
@@ -335,7 +335,7 @@
                     data: JSON.stringify({
                         startTime: start_date.format("YYYY-MM-DDTHH:mm"),
                         endTime: end_date.format("YYYY-MM-DDTHH:mm"),
-                        location: location,
+                        location: location(),
                         maxMemberCount: parseInt(mexPeopleCount),
                         projectName: projectName
                     }),
