--- a/src/main/resources/templates/fragment/head.html
+++ b/src/main/resources/templates/fragment/head.html
@@ -2,10 +2,12 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:fragment="fragment-head" class="head">
-        <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-        <!-- bootstrap-->
-        <link th:rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    </th:block>
+  <th:block th:fragment="fragment-head" class="head">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
+    <!-- bootstrap-->
+    <link th:rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  </th:block>
 </head>
 </html>
