수정 : #99 footer tag 중복 사용 수정

--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="fragment-footer" class="footer">
-  <footer class="bg-light text-center text-white">
+  <div class="bg-light text-center text-white">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <section class="mb-4">
@@ -22,7 +22,7 @@
       <a class="text-white" href="https://innovationacademy.kr">innovationacademy</a>
     </div>
     <!-- Copyright -->
-  </footer>
+  </div>
   <script th:src="@{js/bootstrap.js}"></script>
   <script th:src="@{js/bootstrap.bundle.js}"></script>
 </footer>
